--- a/DockerfileWin
+++ b/DockerfileWin
@@ -28,7 +28,7 @@ ARG ANDROID_EMULATOR_PACKAGE="system-images;${ANDROID_API_LEVEL};${ANDROID_APIS}
 ARG ANDROID_PLATFORM_VERSION="platforms;${ANDROID_API_LEVEL}"
 ARG ANDROID_BUILD_TOOLS="build-tools;${ANDROID_BUILD_TOOLS_VERSION}"
 ARG ANDROID_CMD_VERSION="commandlinetools-linux-8092744_latest.zip"
-ARG ANDROID_SDK_PACKAGES="${ANDROID_EMULATOR_PACKAGE} ${ANDROID_PLATFORM_VERSION} ${ANDROID_BUILD_TOOLS} platform-tools"
+ARG ANDROID_SDK_PACKAGES="${ANDROID_EMULATOR_PACKAGE} ${ANDROID_PLATFORM_VERSION} ${ANDROID_BUILD_TOOLS} platform-tools emulator"
 
 #==============================
 # Set JAVA_HOME - SDK
@@ -75,7 +75,6 @@ RUN curl -sL https://deb.nodesource.com/setup_18.x | bash && \
     apt-get clean && \
     rm -Rf /tmp/* && rm -Rf /var/lib/apt/lists/*
 
-
 #===================
 # Alias
 #===================
@@ -83,7 +82,6 @@ ENV START_EMU=./start_emu.sh
 ENV START_EMU_HEADLESS=./start_emu_headless.sh
 ENV START_VNC=./start_vnc.sh
 ENV START_APPIUM=./start_appium.sh
-
 
 #===================
 # Ports
